# TIMP_05

./: CMakeLists.txt  README.md
.github/: .coveralls.yml
.github/workflows/: Bank.yml  test.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
test/: test.cpp
