cmake_minimum_required(VERSION 3.10)
project(solver_app)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(/home/morrison/TIMP03/solver_application)
add_library(solverlib STATIC /home/morrison/TIMP03/solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC /home/morrison/TIMP03/solver_lib)
add_executable(solver /home/morrison/TIMP03/solver_application/equation.cpp)
target_link_libraries(solver /home/morrison/TIMP03/formatter_ex_lib/libformatter_ex.a)
target_include_directories(solver PUBLIC /home/morrison/TIMP03/formatter_ex_lib)
target_include_directories(solver PUBLIC /home/morrison/TIMP03/formatter_lib)
target_link_libraries(solver /home/morrison/TIMP03/formatter_lib/libformatter.a)
target_link_libraries(solver solverlib)
